package com.example.pasteleriamilsabores.ui.screen

import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.remember
import androidx.compose.runtime.setValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.lifecycle.viewmodel.compose.viewModel
import androidx.navigation.NavController
import com.example.pasteleriamilsabores.model.Usuario
import com.example.pasteleriamilsabores.ui.components.BotonLogin
import com.example.pasteleriamilsabores.ui.components.CampoTexto
import com.example.pasteleriamilsabores.ui.components.TituloText
import com.example.pasteleriamilsabores.viewmodel.LoginViewModel
import com.example.pasteleriamilsabores.viewmodel.SesionViewModel
import com.example.pasteleriamilsabores.viewmodel.UsuarioSesion
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.launch
import kotlinx.coroutines.withContext

//@Preview
@Composable
fun RegistroScreen(
    navController: NavController,
    sesionViewModel: SesionViewModel
){

    var nombre by remember{ mutableStateOf("") }
    var correo by remember{ mutableStateOf("") }
    var contrasena by remember{ mutableStateOf("") }
    var repetirContrasena by remember{ mutableStateOf("") }
    var mensajeError by remember { mutableStateOf("") }

    val viewModel: LoginViewModel= viewModel()

    Box(
        contentAlignment = Alignment.Center,
        modifier = Modifier.fillMaxSize()
    ){
        Column (
            horizontalAlignment = Alignment.CenterHorizontally,
            modifier = Modifier
                .padding(24.dp)
        ){
            TituloText("Crear Cuenta")

            Spacer(modifier = Modifier.height(8.dp))

            Text(
                text = "Registrate a la Pasteleria",
                color = Color.Gray,
                fontSize = 14.sp
            )

            Spacer(modifier = Modifier.height(32.dp))

            CampoTexto(
                valor = nombre,
                onValorCambio = {nombre = it},
                etiqueta = "Nombre de usuario"
            )

            Spacer(modifier = Modifier.height(16.dp))

            CampoTexto(
                valor = correo,
                onValorCambio = {correo=it},
                etiqueta = "Correo electrónico"
            )

            Spacer(modifier = Modifier.height(16.dp))

            CampoTexto(
                valor = contrasena,
                onValorCambio = {contrasena = it},
                etiqueta = "Contraseña"
            )

            Spacer(modifier = Modifier.height(16.dp))

            CampoTexto(
                valor = repetirContrasena,
                onValorCambio = { repetirContrasena = it },
                etiqueta = "Confirmar Contraseña"
            )


            Spacer(modifier = Modifier.height(16.dp))

            BotonLogin(
                texto = "Registrarse",
                onClickAccion = {
                    CoroutineScope(Dispatchers.IO).launch {


                        if (contrasena != repetirContrasena) {
                            withContext(Dispatchers.Main) {
                                mensajeError = "Las contraseñas no coinciden"
                            }
                            return@launch
                        }

                        val nuevoUsuario = Usuario(
                            nombre = nombre,
                            correo = correo,
                            contrasena = contrasena
                        )

                        val idGenerado = viewModel.registrousuario(nuevoUsuario)
                        val usuarioCreado = viewModel.obtenerUsuarioPorId(idGenerado.toInt())

                        sesionViewModel.setUsuario(
                            UsuarioSesion(
                                id = usuarioCreado.id,
                                nombre = usuarioCreado.nombre,
                                correo = usuarioCreado.correo,
                                contrasena = usuarioCreado.contrasena
                            )
                        )

                        withContext(Dispatchers.Main) {
                            navController.navigate("home")
                        }
                    }
                }
            )

            if (mensajeError.isNotEmpty()) {
                Text(
                    text = mensajeError,
                    color = Color.Red,
                    modifier = Modifier.padding(top = 8.dp)
                )
            }

            Spacer(modifier = Modifier.height(16.dp))

            BotonLogin(
                "Volver",
                onClickAccion = {
                    navController.navigate("login")
                }
            )
        }
    }
}